--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,91 +1,85 @@
 ---
+# References:
 # https://github.com/docker/awesome-compose/blob/master/prometheus-grafana/compose.yaml.
 # https://github.com/ruanbekker/grafana-tempo-loki-tracing/blob/main/docker-compose.yaml.
+# https://github.com/grafana/tempo/blob/main/example/docker-compose/otel-collector-multitenant/docker-compose.yaml.
 
-x-logging:
-  &default-logging
-  driver: "json-file"
+x-logging: &default-logging
+  driver: loki
   options:
-    max-size: "1m"
-    max-file: "1"
-    tag: "{{.Name}}"
-
-x-labels:
-  &default-labels
-  logging: "promtail"
-  logging_jobname: "containerlogs"
+    loki-url: 'http://localhost:3100/api/prom/push'
+    loki-pipeline-stages: |
+      - multiline:
+          firstline: '^\d{4}-\d{2}-\d{2} \d{1,2}:\d{2}:\d{2}'
+          max_wait_time: 3s
+      - regex:
+          expression: '^(?P<time>\d{4}-\d{2}-\d{2} \d{1,2}:\d{2}:\d{2},\d{3}) (?P<message>(?s:.*))$$'
 
 services:
 
-  grafana:
-    image: grafana/grafana
-    container_name: grafana
-    ports: [3000:3000]
-    depends_on: [tempo]
-    networks: [obs-network]
-    logging: *default-logging
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=grafana
-      - GF_USERS_DEFAULT_THEME=dark
-      - GF_INSTALL_PLUGINS=https://storage.googleapis.com/integration-artifacts/grafana-exploretraces-app/grafana-exploretraces-app-latest.zip;grafana-traces-app
-    volumes: [./grafana:/etc/grafana/provisioning/datasources]
- 
-  tempo:
-    image: grafana/tempo
-    container_name: tempo
-    ports:
-      - 3200:3200   # tempo http
-      - 9095:9095   # tempo grpc
-      - 14268:14268 # jaeger ingest
-      - 4318:4318   # otlp http
-      - 4317:4317   # otlp grpc
-    volumes:
-      - ./tempo/config.yml:/etc/config.yml
-    command: ["-config.file=/etc/config.yml"]
-    networks: [obs-network] 
-    logging: *default-logging
+  loki:
+    image: grafana/loki
+    container_name: loki
+    command: -config.file=/etc/loki/local-config.yaml
+    ports: 
+      - 3100:3100
 
   prometheus:
     image: prom/prometheus
     container_name: prometheus
     command:  
-      - --config.file=/etc/prometheus/prometheus.yml
-      - --no-scrape.adjust-timestamps
+      - --config.file=/etc/prometheus.yml
       - --web.enable-remote-write-receiver
       - --enable-feature=exemplar-storage
-    ports:    [9090:9090]
-    volumes:  [./prometheus:/etc/prometheus]
-    networks: [obs-network]
-    logging: *default-logging
-
-  loki:
-    image: grafana/loki
-    container_name: loki
-    command: [-config.file=/etc/loki/local-config.yaml] 
-    ports: [3100:3100]
-    networks: [obs-network]
-    logging: *default-logging
-
-  promtail:
-    image: grafana/promtail
-    container_name: promtail
-    depends_on: [loki]
-    command: [-config.file=/etc/promtail/config.yml]
-    networks: [obs-network]
+      - --enable-feature=native-histograms
+    ports:
+      - 9090:9090
     volumes:
-      - ./promtail/config.yml:/etc/promtail/config.yml
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./prometheus/prometheus.yml:/etc/prometheus.yml
     logging: *default-logging
+    depends_on:
+      - loki
 
-  open-telemetry-collector:
-    image: otel/opentelemetry-collector-contrib
-    container_name: open-telemetry-collector
-    depends_on: [tempo]
-    command: [--config=file:/etc/config.yml]
+  tempo:
+    image: grafana/tempo
+    container_name: tempo
+    command:
+      - -config.file=/etc/config.yml
+    ports:
+      - 3200:3200 # tempo.
+      - 4317:4317 # otlp (grpc).
+      - 4318:4318
+    volumes:
+      - ./tempo/config.yml:/etc/config.yml
+    logging: *default-logging
+    depends_on:
+      - loki
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
     ports: 
-      - 4318:4318   # otlp (grpc) receiver.
+      - 3000:3000
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor metricsSummary
+      - GF_USERS_DEFAULT_THEME=dark
+    volumes:
+      - ./grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasources.yml
+    logging: *default-logging
+    depends_on:
+      - loki
+      - prometheus
+      
+  open-telemetry-collector:
+    image: otel/opentelemetry-collector-contrib:0.110.0
+    container_name: open-telemetry-collector
+    command: 
+      - --config=file:/etc/config.yml
+    ports:
+      - 4319:4319   # otlp (grpc).
 
       - 1888:1888   # pprof extension.
       - 13133:13133 # health_check extension.
@@ -93,13 +87,8 @@ services:
 
       - 8888:8888   # Prometheus metrics exposed by collector.
       - 8889:8889   # Prometheus exporter metrics.
-
-    networks: [obs-network]
-    volumes:
+    volumes: 
       - ./open-telemetry-collector/config.yml:/etc/config.yml
     logging: *default-logging
-
-networks:
-  obs-network:
-    name: obs-network 
-    driver: bridge
+    depends_on:
+      - loki
