--- a/tempo/config.yml
+++ b/tempo/config.yml
@@ -1,20 +1,15 @@
+---
+stream_over_http_enabled: true
 server:
   http_listen_port: 3200
+  log_level: info
 
 distributor:
   receivers:
-    jaeger:
-      protocols:
-        grpc:
-        thrift_compact:
-        thrift_binary:
-        thrift_http:
     otlp:
       protocols:
-        http:
-          endpoint: 0.0.0.0:55681
         grpc:
-          endpoint: 0.0.0.0:4317
+          endpoint: tempo:4317
 
 ingester:
   trace_idle_period: 10s
@@ -26,16 +21,6 @@ compactor:
     block_retention: 48h
     compacted_block_retention: 1h
 
-storage:
-  trace:
-    backend: local
-    local:
-      path: /var/tempo/traces
-    block:
-      bloom_filter_false_positive: 0.05
-      v2_index_downsample_bytes: 1000
-      v2_encoding: zstd
-
 metrics_generator:
   registry:
     external_labels:
@@ -46,11 +31,19 @@ metrics_generator:
     remote_write:
       - url: http://prometheus:9090/api/v1/write
         send_exemplars: true
+  traces_storage:
+    path: /var/tempo/generator/traces
+
+storage:
+  trace:
+    backend: local
+    wal:
+      path: /var/tempo/wal
+    local:
+      path: /var/tempo/blocks
 
 overrides:
   defaults:
     metrics_generator:
-      processors: [service-graphs, span-metrics] # enables metrics generator
-        
-#overrides:
-#  per_tenant_override_config: /conf/overrides.yaml
+      processors: [service-graphs, span-metrics, local-blocks]
+      generate_native_histograms: both 
