--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@
 # https://github.com/docker/awesome-compose/blob/master/prometheus-grafana/compose.yaml.
 # https://github.com/ruanbekker/grafana-tempo-loki-tracing/blob/main/docker-compose.yaml.
 # https://github.com/grafana/tempo/blob/main/example/docker-compose/otel-collector-multitenant/docker-compose.yaml.
+# https://github.com/blueswen/fastapi-observability/blob/main/docker-compose.yaml.
 
 x-logging: &default-logging
   driver: loki
@@ -40,17 +41,19 @@ services:
     depends_on:
       - loki
 
+  # TODO: figure out why this version works, but latest doesn't.
   tempo:
-    image: grafana/tempo
+    image: grafana/tempo:2.4.1
     container_name: tempo
-    command:
-      - -config.file=/etc/config.yml
+    command: [ "--target=all", "--storage.trace.backend=local", "--storage.trace.local.path=/var/tempo", "--auth.enabled=false" ]
+    # command:
+    #   - -config.file=/etc/config.yml
     ports:
       - 3200:3200 # tempo.
       - 4317:4317 # otlp (grpc).
       - 4318:4318
-    volumes:
-      - ./tempo/config.yml:/etc/config.yml
+    # volumes:
+      # - ./tempo/config.yml:/etc/config.yml
     logging: *default-logging
     depends_on:
       - loki
@@ -72,7 +75,8 @@ services:
     depends_on:
       - loki
       - prometheus
-      
+    
+  # TODO: figure out why every version after this one fails to expose the ':8888/metrics' endpoint.
   open-telemetry-collector:
     image: otel/opentelemetry-collector-contrib:0.110.0
     container_name: open-telemetry-collector
