--- a/grafana/datasource.yml
+++ b/grafana/datasource.yml
@@ -31,7 +31,7 @@ datasources:
   uid: tempo
   access: proxy
   orgId: 1
-  url: http://tempo:3200
+  url: http://tempo
   basicAuth: false
   isDefault: true
   version: 1
