--- a/open-telemetry-collector/config.yml
+++ b/open-telemetry-collector/config.yml
@@ -7,8 +7,8 @@ receivers:
     protocols:
       grpc:
         endpoint: 127.0.0.1:4319
-        tls:
-          insecure: true
+        # tls:
+        #   insecure: true
 
   # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/prometheusreceiver
   prometheus/internal:
@@ -34,7 +34,7 @@ exporters:
 
   # https://github.com/open-telemetry/opentelemetry-collector/tree/main/exporter/otlpexporter
   otlp:
-    endpoint: tempo:4318
+    endpoint: tempo:4317
     tls:
       insecure: true
 
